erDiagram
    %% ===== SIMPLIFIED CURRENT SCHEMA =====
    %% Core tables with key relationships only
    
    users {
        bigint id PK
        varchar name
        varchar email UK
        varchar role
        boolean is_premium
        timestamp created_at
    }

    files {
        bigint id PK
        bigint user_id FK
        bigint parent_id FK
        varchar file_name
        varchar file_path
        boolean is_folder
        boolean is_blockchain_stored
        boolean is_vectorized
        boolean is_permanent_storage
        timestamptz deleted_at
    }

    documents {
        bigint id PK
        bigint file_id FK
        text content
        vector embedding
        jsonb metadata
    }

    blockchain_uploads {
        bigint id PK
        bigint file_id FK
        varchar provider
        varchar ipfs_hash
        varchar upload_status
        boolean is_permanent_storage
    }

    system_activities {
        bigint id PK
        bigint user_id FK
        bigint file_id FK
        varchar activity_type
        varchar action
        text description
        timestamp created_at
    }

    user_sessions {
        bigint id PK
        bigint user_id FK
        varchar session_id UK
        inet ip_address
        boolean is_active
        boolean is_mobile
        boolean is_tablet
        boolean is_desktop
    }

    notifications {
        bigint id PK
        bigint user_id FK
        varchar type
        varchar title
        text message
        timestamptz read_at
    }

    %% ===== KEY RELATIONSHIPS =====
    users ||--o{ files : "users.id → files.user_id"
    users ||--o{ files : "users.id → files.permanent_storage_enabled_by"
    files ||--o{ files : "files.id → files.parent_id"
    files ||--o{ documents : "files.id → documents.file_id"
    files ||--o{ blockchain_uploads : "files.id → blockchain_uploads.file_id"
    files ||--o{ system_activities : "files.id → system_activities.file_id"
    users ||--o{ system_activities : "users.id → system_activities.user_id"
    users ||--o{ user_sessions : "users.id → user_sessions.user_id"
    users ||--o{ notifications : "users.id → notifications.user_id"
